[package]
name = "laye"
version = "0.1.0"
edition = "2024"
description = "A framework-agnostic role and permission based access control library"
license = "MIT"

[features]
default = []
actix-web = ["dep:actix-web"]
tower = ["dep:tower", "dep:http", "dep:futures-util"]

[dependencies]
actix-web   = { version = "4",   optional = true }
tower       = { version = "0.5", optional = true }
http        = { version = "1",   optional = true }
futures-util = { version = "0.3", default-features = false, features = ["alloc"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
axum  = "0.8"
