[package]
name = "laye"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "A framework-agnostic role and permission based access control library"
license = "MIT"
categories = ["authentication", "web-programming"]
keywords = [
  "rbac",
  "access-control",
  "authorization",
  "permissions",
  "roles",
]
authors = ["Oyinbo David Bayode <dev.davexoyinbo@gmail.com>"]
documentation = "https://docs.rs/laye"
repository = "https://github.com/dev-davexoyinbo/laye"
exclude = [".github", "Makefile"]

[profile.release]
lto = "fat"
codegen-units = 1
# opt-level = 3
# opt-level = "z"
# opt-level = "s"
opt-level = 3
# strip = "debuginfo"
strip = "symbols"

[features]
default = []
actix-web = ["dep:actix-web"]
tower = ["dep:tower", "dep:http", "dep:futures-util"]

[dependencies]
actix-web   = { version = "4",   optional = true }
tower       = { version = "0.5", optional = true }
http        = { version = "1",   optional = true }
futures-util = { version = "0.3", default-features = false, features = ["alloc"], optional = true }

[dev-dependencies]
tokio     = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net"] }
axum      = "0.8"
actix-web = "4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "actix_web_example"
required-features = ["actix-web"]

[[example]]
name = "axum_example"
required-features = ["tower"]
